--- a/ExportBBF/ExportBBF/ExportBBF.vcxproj
+++ b/ExportBBF/ExportBBF/ExportBBF.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HeaderStructs.h" />
     <ClInclude Include="maya_includes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
