--- a/ExportBBF/ExportBBF/ExportBBF.vcxproj
+++ b/ExportBBF/ExportBBF/ExportBBF.vcxproj
@@ -154,12 +154,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MeshExport.cpp" />
     <ClCompile Include="SkelAnimExport.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HeaderStructs.h" />
     <ClInclude Include="maya_includes.h" />
+    <ClInclude Include="MeshExport.h" />
     <ClInclude Include="SkelAnimExport.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
