--- a/ExportBBF/ExportBBF/ExportBBF.vcxproj.filters
+++ b/ExportBBF/ExportBBF/ExportBBF.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MaterialExport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="maya_includes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HeaderStructs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MaterialExport.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
