--- a/ExportBBF/ExportBBF/ExportBBF.vcxproj.filters
+++ b/ExportBBF/ExportBBF/ExportBBF.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SkelAnimExport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MeshExport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="MaterialExport.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -26,7 +32,13 @@
     <ClInclude Include="maya_includes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SkelAnimExport.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="HeaderStructs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshExport.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MaterialExport.h">
