--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *.pdb
 *.ilk
 *.idb
+*.mll
+*.exp
 
 # Precompiled Headers
 *.gch
@@ -80,3 +82,4 @@ $RECYCLE.BIN/
 *.msp
 #### Windows shortcuts
 *.lnk
+ExportBBF/ExportBBF.VC.db
