--- a/ExportBBF/ExportBBF/ExportBBF.vcxproj.filters
+++ b/ExportBBF/ExportBBF/ExportBBF.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="MaterialExport.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ModelExport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="maya_includes.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MaterialExport.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelExport.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
