--- a/ExportBBF/ExportBBF/ExportBBF.vcxproj.filters
+++ b/ExportBBF/ExportBBF/ExportBBF.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ModelExport.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BoundingExport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="maya_includes.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ModelExport.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoundingExport.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
